--- a/login.html
+++ b/login.html
@@ -126,7 +126,7 @@ function handleLogin() { // Umbenannt von login zu handleLogin
 <div class="login-box">
     <h1>🍔 Burgershot Login</h1>
 
-    <input type="text" id="username" placeholder="Benutzername (z.B. HorvathA)" required>
+    <input type="text" id="username" placeholder="Benutzername (z.B. Max)" required>
     <input type="password" id="password" placeholder="4-stelliges Passwort" maxlength="4" required>
 
     <button onclick="handleLogin()">Login</button>
