--- a/management.html
+++ b/management.html
@@ -2,120 +2,73 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Burgershot Management</title>
+    <title>Management</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header>
-    <div class="header-left"><a href="index.html" class="brand-link">🍔 Burgershot Intern</a></div>
-    <div class="header-right">
-        <span id="welcomeUser"></span>
-        <button class="logout-btn" onclick="logout()">Logout</button>
-    </div>
-</header>
+<header><a href="index.html" class="brand-link">← Zurück</a></header>
 
 <section class="dashboard">
-    <div class="panel large management-container">
-        <h2>🍔 Personalverwaltung</h2>
-
-        <div class="hiring-bar">
-            <input type="text" id="newUsername" placeholder="Name des Mitarbeiters">
-            <select id="newRole">
-                <option>Mitarbeiter_in</option>
-                <option>Management</option>
-                <option>Cheffe</option>
+    <div class="panel full-width">
+        <h3 style="margin-bottom:20px;">👤 Personalverwaltung</h3>
+        
+        <div style="display:flex; gap:10px; margin-bottom:30px; background:rgba(255,255,255,0.05); padding:15px; border-radius:10px;">
+            <input type="text" id="newName" class="input-field" placeholder="Name..." style="flex:2;">
+            <select id="newRole" class="input-field" style="flex:1;">
+                <option value="Mitarbeiter_in">Mitarbeiter/in</option>
+                <option value="Management">Management</option>
+                <option value="Cheffe">Cheffe</option>
             </select>
-            <button class="add-btn" onclick="createAccount()">Einstellen</button>
+            <button class="add-btn" onclick="addUser()">Einstellen</button>
         </div>
 
-        <div class="account-table-header">
+        <div class="table-head mgmt-grid">
             <span>Name</span>
             <span>Rang</span>
-            <span style="text-align: right;">Aktionen</span>
+            <span style="text-align:right;">Aktion</span>
         </div>
-
-        <div id="accountList" class="account-list-container"></div>
+        <div id="userList"></div>
     </div>
 </section>
 
 <script src="script.js"></script>
 <script>
-    // In der management.html
-        requireLogin();
-        if (!isAdmin()) {
-            window.location.href = "index.html"; // Schickt normale Mitarbeiter zurück
-        }
-
-    const rankOrder = ["Mitarbeiter_in", "Management", "Cheffe"];
-
-    function createAccount() {
-        const name = document.getElementById("newUsername").value.trim();
-        const role = document.getElementById("newRole").value;
-        if (!name) return alert("Name angeben!");
-        const accounts = getAccounts();
-        if (accounts[name]) return alert("Existiert bereits!");
-
-        accounts[name] = { password: "0000", role: role, isFirstLogin: true };
-        saveAccounts(accounts);
-        document.getElementById("newUsername").value = "";
-        loadAccounts();
-    }
-
-    function changeRank(user, dir) {
-        const accs = getAccounts();
-        let idx = rankOrder.indexOf(accs[user].role);
-        let newIdx = idx + dir;
-        if (newIdx >= 0 && newIdx < rankOrder.length) {
-            accs[user].role = rankOrder[newIdx];
-            saveAccounts(accs);
-            loadAccounts();
-        }
-    }
-
-    function deleteAccount(user) {
-        if (confirm(`${user} wirklich kündigen?`)) {
-            const accs = getAccounts();
-            delete accs[user];
-            saveAccounts(accs);
-            loadAccounts();
-        }
-    }
-
-    function loadAccounts() {
-        const accounts = getAccounts();
-        const list = document.getElementById("accountList");
+    requireLogin();
+    function renderUsers() {
+        const list = document.getElementById("userList");
         list.innerHTML = "";
-
-        const weight = { "Cheffe": 3, "Management": 2, "Mitarbeiter_in": 1 };
-
-        const sorted = Object.keys(accounts).sort((a,b) => {
-            if (weight[accounts[b].role] !== weight[accounts[a].role]) {
-                return weight[accounts[b].role] - weight[accounts[a].role];
-            }
-            return a.localeCompare(b);
-        });
-
-        sorted.forEach(user => {
-            const data = accounts[user];
-            const div = document.createElement("div");
-            div.className = "account-row";
-            let bCls = data.role === "Cheffe" ? "badge-cheffe" : (data.role === "Management" ? "badge-management" : "badge-mitarbeiter");
-
-            div.innerHTML = `
-                <span>${user}</span>
-                <span><span class="role-badge ${bCls}">${data.role}</span></span>
-                <div class="action-buttons">
-                    <button class="rank-btn" onclick="changeRank('${user}', 1)">↑</button>
-                    <button class="rank-btn" onclick="changeRank('${user}', -1)">↓</button>
-                    <button class="delete-btn" onclick="deleteAccount('${user}')">Kündigen</button>
+        const accs = getAccounts();
+        Object.keys(accs).forEach(name => {
+            const row = document.createElement("div");
+            row.className = "table-row mgmt-grid";
+            row.innerHTML = `
+                <span class="bold">${name}</span>
+                <span style="color:var(--accent);">${accs[name].role}</span>
+                <div style="text-align:right;">
+                    <button class="add-btn" style="background:#ff4646; color:white; padding:5px 10px;" onclick="delUser('${name}')">Kündigen</button>
                 </div>
             `;
-            list.appendChild(div);
+            list.appendChild(row);
         });
     }
-
-    loadAccounts();
+    function addUser() {
+        const name = document.getElementById("newName").value;
+        const role = document.getElementById("newRole").value;
+        if(!name) return alert("Name fehlt!");
+        const accs = getAccounts();
+        accs[name] = { password: "0000", role: role, isFirstLogin: true };
+        saveAccounts(accs);
+        renderUsers();
+    }
+    function delUser(name) {
+        if(confirm(name + " kündigen?")) {
+            const accs = getAccounts();
+            delete accs[name];
+            saveAccounts(accs);
+            renderUsers();
+        }
+    }
+    window.onload = renderUsers;
 </script>
 </body>
 </html>
