--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
 <body>
 <header>
     <div class="brand-link">🍔 Burgershot Intern</div>
-    <button class="add-btn" style="background: #444; color: white;" onclick="logout()">Logout</button>
+    <div style="display:flex; align-items:center; gap:15px;">
+        <span id="userDisplay"></span>
+        <button class="add-btn" style="background: #444; color: white;" onclick="logout()">Logout</button>
+    </div>
 </header>
 
 <section class="dashboard">
-    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+    <div class="dashboard-grid">
         <div class="panel" onclick="location.href='abmeldungen.html'" style="cursor:pointer;">
             <h3 style="color:var(--accent); margin-bottom:15px;">📅 Abmeldungen</h3>
             <div id="absPreview"></div>
         </div>
 
-        <div class="panel" onclick="location.href='management.html'" style="cursor:pointer; border-color: gold;">
+        <div class="panel"><h3>🛒 Einkäufe</h3><p style="color:#444;">In Kürze...</p></div>
+        <div class="panel"><h3>🎵 Musik</h3><p style="color:#444;">In Kürze...</p></div>
+
+        <div class="panel full-width" id="adminPanel" style="display:none; cursor:pointer; border-color: gold;" onclick="location.href='management.html'">
             <h3 style="color:gold;">⭐ Management Center</h3>
-            <p>Mitarbeiter & System verwalten</p>
+            <p>Personalverwaltung & Ränge verwalten</p>
         </div>
     </div>
 </section>
@@ -28,15 +34,22 @@
 <script src="script.js"></script>
 <script>
     requireLogin();
-    function renderPreview() {
+    
+    function init() {
+        document.getElementById("userDisplay").innerText = "Moin, " + sessionStorage.getItem("loggedInUser");
+        
+        // Admin-Check
+        if(isAdmin()) document.getElementById("adminPanel").style.display = "block";
+
+        // Vorschau Abmeldungen
         const div = document.getElementById("absPreview");
         const data = getAbsences().slice(-3).reverse();
         div.innerHTML = data.length ? "" : "<p style='color:#444;'>Keine Einträge</p>";
         data.forEach(a => {
-            div.innerHTML += `<div style="padding:5px 0; border-bottom:1px solid #222;">${a.name} <small style="color:#888;">(${a.time})</small></div>`;
+            div.innerHTML += `<div style="padding:8px 0; border-bottom:1px solid #222;">${a.name} <small style="color:#888;">(${a.time})</small></div>`;
         });
     }
-    window.onload = renderPreview;
+    window.onload = init;
 </script>
 </body>
 </html>
