--- a/abmeldungen.html
+++ b/abmeldungen.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <a href="index.html" class="brand-link">← Zurück</a>
+    <a href="index.html" class="brand-link">← Zurück zum Dashboard</a>
     <button class="add-btn" onclick="document.getElementById('modal').style.display='flex'">+ Neue Abmeldung</button>
 </header>
 
@@ -28,7 +28,7 @@
         <h3 style="margin-bottom:15px; color:var(--accent);">Neue Abmeldung</h3>
         <input type="text" id="inName" class="input-field" placeholder="Dein Name" style="width:100%; margin-bottom:10px;">
         <input type="text" id="inTime" class="input-field" placeholder="Zeitraum (z.B. 24.02.-01.03.)" style="width:100%; margin-bottom:10px;">
-        <textarea id="inReason" class="input-field" placeholder="Grund" style="width:100%; height:80px; margin-bottom:15px;"></textarea>
+        <textarea id="inReason" class="input-field" placeholder="Grund für die Abmeldung" style="width:100%; height:80px; margin-bottom:15px;"></textarea>
         <div style="display:flex; gap:10px;">
             <button class="add-btn" onclick="addEntry()" style="flex:1;">Speichern</button>
             <button class="add-btn" style="background:#444; color:white; flex:1;" onclick="document.getElementById('modal').style.display='none'">Abbrechen</button>
@@ -42,14 +42,17 @@
     function render() {
         const list = document.getElementById("absenceList");
         list.innerHTML = "";
-        getAbsences().reverse().forEach(item => {
+        const data = getAbsences();
+        if(data.length === 0) list.innerHTML = "<p class='reason-text' style='padding:20px; text-align:center;'>Keine Abmeldungen vorhanden.</p>";
+        
+        data.reverse().forEach(item => {
             const row = document.createElement("div");
             row.className = "table-row";
             row.innerHTML = `
                 <span class="bold">${item.name}</span>
                 <span>${item.time}</span>
                 <span class="reason-text">${item.reason}</span>
-                <div style="text-align:right;"><button class="delete-btn-small" onclick="del(${item.id})">🗑️</button></div>
+                <div style="text-align:right;"><button style="background:none; border:none; cursor:pointer; font-size:1.2rem;" onclick="del(${item.id})">🗑️</button></div>
             `;
             list.appendChild(row);
         });
@@ -57,15 +60,16 @@
     function addEntry() {
         const name = document.getElementById("inName").value;
         const time = document.getElementById("inTime").value;
-        const reason = document.getElementById("inReason").value;
-        if(!name || !time) return alert("Name/Zeitraum fehlt!");
+        const reason = document.getElementById("inReason").value || "Kein Grund";
+        if(!name || !time) return alert("Bitte Name und Zeitraum ausfüllen!");
+        
         const data = getAbsences();
         data.push({ id: Date.now(), name, time, reason });
         saveAbsences(data);
         location.reload();
     }
     function del(id) {
-        if(confirm("Löschen?")) {
+        if(confirm("Diesen Eintrag wirklich löschen?")) {
             saveAbsences(getAbsences().filter(i => i.id !== id));
             render();
         }
