--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Burgershot Intern - Dashboard</title>
+    <title>Burgershot Intern</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,124 +17,68 @@
 
 <section class="dashboard">
     <div class="dashboard-grid">
-        
         <div class="panel scrollable" onclick="location.href='abmeldungen.html'">
-            <div class="panel-header">
-                <span>📅 Abmeldungen</span>
-                <div class="count-badge">2 aktiv</div>
-            </div>
+            <div class="panel-header"><span>📅 Abmeldungen</span></div>
             <div class="panel-content">
-                <div class="list-item">
-                    <span>Max Mustermann</span>
-                    <span class="date">bis 24.02.</span>
-                </div>
-                <div class="list-item">
-                    <span>Lisa Lustig</span>
-                    <span class="date">bis 01.03.</span>
-                </div>
+                <p>Max Mustermann (bis 24.02.)</p>
+                <p>Lisa Lustig (bis 01.03.)</p>
             </div>
         </div>
 
         <div class="panel highlight" onclick="location.href='announcements.html'">
             <div class="panel-header"><span>📢 Announcements</span></div>
-            <p style="font-size: 0.9rem; color: #bbb; text-align: left;">Neue Dienstvorschrift online! Bitte im Archiv lesen.</p>
+            <p style="font-size: 0.85rem; color: #bbb;">Neue Dienstvorschrift online!</p>
         </div>
 
-        <div class="panel scrollable" onclick="location.href='bewerber.html'">
-            <div class="panel-header">
-                <span>📝 Bewerber</span>
-                <div class="count-badge">1 neu</div>
-            </div>
-            <div class="panel-content">
-                <div class="list-item">
-                    <span>Kevin Ketchup</span>
-                    <span class="role-badge badge-mitarbeiter" style="font-size: 0.7rem;">OFFEN</span>
-                </div>
-                <div class="list-item" style="opacity: 0.3;">
-                    <span>Keine weiteren Bewerbungen</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="panel" onclick="location.href='einkaeufe.html'">
-            <span style="font-size: 1.5rem; display: block; margin-bottom: 5px;">🛒</span>
-            <span>Einkäufe / Lager</span>
-        </div>
-
-        <div class="panel" onclick="location.href='kleidung.html'">
-            <span style="font-size: 1.5rem; display: block; margin-bottom: 5px;">👔</span>
-            <span>Kleiderordnung</span>
-        </div>
-
-        <div class="panel" onclick="location.href='musik.html'">
-            <span style="font-size: 1.5rem; display: block; margin-bottom: 5px;">🎵</span>
-            <span>Musik-Playlist</span>
-        </div>
-
-        <div class="panel" onclick="location.href='service.html'">
-            <span style="font-size: 1.5rem; display: block; margin-bottom: 5px;">📋</span>
-            <span>Service-Übersicht</span>
-        </div>
-
-        <div class="panel" onclick="location.href='orders.html'">
-            <span style="font-size: 1.5rem; display: block; margin-bottom: 5px;">🍔</span>
-            <span>Bestellungen</span>
-        </div>
+        <div class="panel" onclick="location.href='bewerber.html'"><span>📝 Bewerber</span></div>
+        <div class="panel" onclick="location.href='einkaeufe.html'"><span>🛒 Lager</span></div>
+        <div class="panel" onclick="location.href='kleiderordnung.html'"><span>👔 Kleidung</span></div>
+        <div class="panel" onclick="location.href='musik.html'"><span>🎵 Musik</span></div>
 
         <div class="panel full-width" id="adminPanel" style="display:none;" onclick="location.href='management.html'">
-            <span style="font-size: 1.4rem; color: #faac15; font-weight: bold;">⭐ Management Center</span>
-            <p style="color: #888; font-size: 0.8rem; margin-top: 5px;">Personalverwaltung, Kündigungen & Beförderungen</p>
+            <span style="font-size: 1.2rem; color: #faac15; font-weight: bold;">⭐ Management Center</span>
+            <p style="color: #888; font-size: 0.8rem;">Personalverwaltung & System</p>
         </div>
     </div>
 </section>
 
 <div class="modal-backdrop" id="firstLoginModal" style="display:none;">
     <div class="modal">
-        <h2>🔒 Passwort ändern</h2>
+        <h2>🔒 PIN ändern</h2>
         <p>Bitte lege eine eigene 4-stellige PIN fest.</p>
-        <input type="password" id="newPinInput" maxlength="4" style="margin: 20px 0; padding: 10px; text-align: center; font-size: 20px; width: 100px; border-radius: 8px; border: 1px solid #faac15; background: #000; color: #fff;">
-        <br>
-        <button class="add-btn" style="height: 40px; width: 200px;" onclick="saveNewPassword()">Speichern</button>
+        <input type="password" id="newPinInput" maxlength="4" style="padding: 10px; text-align: center; font-size: 20px; width: 100px; background: #000; color: #fff; border: 1px solid #faac15;">
+        <br><br>
+        <button class="add-btn" onclick="saveNewPassword()">Speichern</button>
     </div>
 </div>
 
 <script src="script.js"></script>
 <script>
     requireLogin();
-    setHeaderUser();
-
-    // Management Panel Logik
-    if (isAdmin()) {
-        const adminPanel = document.getElementById("adminPanel");
-        if (adminPanel) {
-            adminPanel.style.display = "flex"; 
-        }
-    }
-
-    function checkPasswordStatus() {
-        const username = sessionStorage.getItem("loggedInUser");
-        const accounts = getAccounts();
-        if (accounts[username] && accounts[username].isFirstLogin) {
+    window.onload = () => {
+        setHeaderUser();
+        if (isAdmin()) document.getElementById("adminPanel").style.display = "flex";
+        
+        const user = sessionStorage.getItem("loggedInUser");
+        if (getAccounts()[user]?.isFirstLogin) {
             document.getElementById("firstLoginModal").style.display = "flex";
         }
-    }
+    };
 
     function saveNewPassword() {
         const pin = document.getElementById("newPinInput").value;
         const user = sessionStorage.getItem("loggedInUser");
-        const accounts = getAccounts();
-        if (pin.length === 4 && !isNaN(pin) && pin !== "0000") {
-            accounts[user].password = pin;
-            accounts[user].isFirstLogin = false;
-            saveAccounts(accounts);
+        const accs = getAccounts();
+        if (pin.length === 4 && !isNaN(pin)) {
+            accs[user].password = pin;
+            accs[user].isFirstLogin = false;
+            saveAccounts(accs);
             document.getElementById("firstLoginModal").style.display = "none";
-            alert("PIN erfolgreich gesetzt!");
+            alert("PIN erfolgreich geändert!");
         } else {
-            alert("Ungültige PIN (4 Zahlen erforderlich, nicht 0000)");
+            alert("Bitte gib 4 Zahlen ein.");
         }
     }
-
-    window.onload = checkPasswordStatus;
 </script>
 </body>
 </html>
